<resources>
    <string name="app_name">MassageStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">一葉青雲</string>

    <string name="menu_project">项目管理</string>
    <string name="menu_artificer">员工管理</string>
    <string name="menu_member">会员管理</string>


    <string name="insert_project">添加项目</string>
    <string name="project_name">名称</string>
    <string name="project_price">价格</string>
    <string name="project_commission">员工提成</string>
    <string name="edit_name">请输入名称</string>
    <string name="edit_price">请输入价格</string>
    <string name="edit_phone">请输入手机号码</string>
    <string name="edit_commission">请输入员工提成</string>

    <string name="insert_user">添加技师</string>
    <string name="phone">电话</string>
</resources>
