<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:background="@color/color_99000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingStart="20dp"
        android:paddingBottom="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_main"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/name"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/menu_main"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/menu"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_main"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:gravity="center"
            android:text="项目名称"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/time"
            android:gravity="center"
            android:text="服务时长"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/price"
            android:gravity="center"
            android:text="价格"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/remarks"
            android:gravity="center"
            android:text="会员价"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_main"
        android:layout_below="@+id/lin_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RadioGroup
        android:id="@+id/rg_main"
        android:visibility="gone"
        android:background="@color/themePrimary"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rb_project_main"
            android:gravity="center"
            android:drawableTop="@drawable/project"
            android:padding="20dp"
            android:text="@string/menu_project"
            android:textColor="@color/white"
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_artificer_main"
            android:gravity="center"
            android:drawableTop="@drawable/artificer"
            android:padding="20dp"
            android:text="@string/menu_artificer"
            android:textColor="@color/white"
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_member_main"
            android:gravity="center"
            android:drawableTop="@drawable/member"
            android:padding="20dp"
            android:text="@string/menu_member"
            android:textColor="@color/white"
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_list_main"
            android:gravity="center"
            android:drawableTop="@drawable/member"
            android:padding="20dp"
            android:text="订单列表"
            android:textColor="@color/white"
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
</RelativeLayout>