<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="400dp"
    android:layout_height="400dp">

    <RelativeLayout
        android:id="@+id/toolbar_projeck_insert"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <TextView
            android:text="@string/insert_project"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/back_projeck_insert"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/back" />

        <ImageView
            android:id="@+id/save_projeck_insert"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/save" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_below="@+id/toolbar_projeck_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical">
        
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_project_dialog_name"
                android:text="@string/project_name"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edit_project_dialog_name"
                android:background="@color/white"
                android:hint="@string/edit_name"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/tv_project_dialog_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_project_dialog_price"
                android:text="@string/project_price"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <com.example.massagestore.util.AmountEditText
                android:id="@+id/edit_project_dialog_price"
                android:background="@color/white"
                android:hint="@string/edit_price"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/tv_project_dialog_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_project_dialog_commission"
                android:text="@string/project_commission"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <com.example.massagestore.util.AmountEditText
                android:id="@+id/edit_project_dialog_commission"
                android:background="@color/white"
                android:hint="@string/edit_commission"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/tv_project_dialog_commission"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_project_dialog_time"
                android:text="项目时长"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edit_project_dialog_time"
                android:background="@color/white"
                android:hint="分钟"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/tv_project_dialog_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_project_dialog_isMember"
                android:text="会员优惠"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_toRightOf="@+id/tv_project_dialog_isMember"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_project_dialog"
                    android:layout_centerInParent="true"
                    app:thumbTint="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_switch"
            android:visibility="gone"
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/v1_price"
                    android:background="@drawable/edit_bg"
                    android:hint="VIP_1"
                    android:inputType="number|numberDecimal"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/v2_price"
                    android:background="@drawable/edit_bg"
                    android:hint="VIP_2"
                    android:inputType="number|numberDecimal"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/v3_price"
                    android:background="@drawable/edit_bg"
                    android:hint="VIP_3"
                    android:inputType="number|numberDecimal"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/v4_price"
                    android:background="@drawable/edit_bg"
                    android:hint="VIP_4"
                    android:inputType="number|numberDecimal"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_project_dialog_remarks"
                android:text="备注"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edit_project_dialog_remarks"
                android:background="@color/white"
                android:hint="..."
                android:gravity="center"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/tv_project_dialog_remarks"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>