<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="400dp"
    android:layout_height="400dp">

    <RelativeLayout
        android:id="@+id/toolbar_member_insert"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <TextView
            android:text="添加会员"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/back_member_insert"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/back" />

        <ImageView
            android:id="@+id/save_member_insert"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/save" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/toolbar_member_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical">

        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_member_dialog_name"
                android:text="@string/project_name"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edit_member_dialog_name"
                android:background="@color/white"
                android:hint="@string/edit_name"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/tv_member_dialog_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_member_dialog_phone"
                android:text="电话"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edit_project_dialog_phone"
                android:background="@color/white"
                android:hint="@string/edit_phone"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/tv_member_dialog_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_member_dialog_price"
                android:text="充值金额"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <com.example.massagestore.util.AmountEditText
                android:id="@+id/edit_project_dialog_price"
                android:background="@color/white"
                android:hint="请输入充值金额"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/tv_member_dialog_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_project_dialog_level"
                android:text="会员级别"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <RadioGroup
                android:id="@+id/radio_member_group"
                android:background="@color/white"
                android:gravity="center"
                android:layout_toRightOf="@+id/tv_project_dialog_level"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_v1"
                    android:button="@null"
                    android:background="@mipmap/v1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio_v2"
                    android:button="@null"
                    android:layout_marginStart="@dimen/dp_10"
                    android:background="@mipmap/v2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio_v3"
                    android:button="@null"
                    android:background="@mipmap/v3"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio_v4"
                    android:button="@null"
                    android:background="@mipmap/v4"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_project_dialog_remarks"
                android:text="备注"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edit_project_dialog_remarks"
                android:background="@color/white"
                android:hint="..."
                android:gravity="center"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/tv_project_dialog_remarks"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/recharge"
        android:visibility="gone"
        android:text="充值"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/check_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="120dp"
        android:layout_height="35dp" />
</RelativeLayout>